# ogp-creater

./: Cargo.toml  README.md  user-dict.csv
.github/workflows/: release.yml
src/: main.rs
