[package]
name = "ogp-creater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
rusttype = "0.9.3"
lindera-tokenizer = { version = "0.25.0", features = ["ipadic"] }
lindera-core = "0.25.0"
lindera-dictionary = "0.25.0"
